--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.13.0"
   }
