--- a/.env_example
+++ b/.env_example
@@ -3,3 +3,9 @@ USUARIOBD=
 PASSBD= 
 PORT= 
 SESSION_SECRET = 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
