--- a/.env_example
+++ b/.env_example
@@ -9,3 +9,5 @@ FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+EMAIL_USER=tu_correo@gmail.com
+EMAIL_PASS=tu_contraseña_de_aplicacion
